k8s/user-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-frontend
  namespace: poker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-frontend

  template:
    metadata:
      labels:
        app: user-frontend

    spec:
      containers:
        - name: user-frontend
          image: pks2906/poker-user-frontend:latest

          ports:
            - containerPort: 4173
