k8s/websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
  namespace: poker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: websocket

  template:
    metadata:
      labels:
        app: websocket

    spec:
      containers:
        - name: websocket
          image: pks2906/poker-websocket:latest

          ports:
            - containerPort: 3001
