k8s/admin-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
  namespace: poker

spec:
  selector:
    app: admin-frontend

  ports:
    - port: 80
      targetPort: 4173

  type: ClusterIP
