k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: poker

spec:
  selector:
    app: backend

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
