k8s/user-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-frontend
  namespace: poker

spec:
  selector:
    app: user-frontend

  ports:
    - port: 80
      targetPort: 4173

  type: ClusterIP
