k8s/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket
  namespace: poker

spec:
  selector:
    app: websocket

  ports:
    - port: 3001
      targetPort: 3001

  type: ClusterIP
