k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poker-ingress
  namespace: poker
spec:
  ingressClassName: nginx

  rules:
    - host: poker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-frontend
                port:
                  number: 80

    - host: admin.poker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-frontend
                port:
                  number: 80
